tests/ui/macros/issue-88206.stderr
error: cannot find macro `X` in this scope
  --> $DIR/issue-88206.rs:74:5
   |
LL |     X!();
   |     ^ not found in this scope
   |
note: `X` is imported here, but it is a struct, not a macro
  --> $DIR/issue-88206.rs:17:35
   |
LL | use hey::{Serialize, Deserialize, X};
   |                                   ^

error: cannot find macro `test` in this scope
  --> $DIR/issue-88206.rs:69:5
   |
LL |     test!();
   |     ^^^^ not found in this scope
   |
   = note: `test` is in scope, but it is an attribute: `#[test]`

error: cannot find macro `Copy` in this scope
  --> $DIR/issue-88206.rs:64:5
   |
LL |     Copy!();
   |     ^^^^ not found in this scope
   |
   = note: `Copy` is in scope, but it is a derive macro: `#[derive(Copy)]`

error: cannot find macro `Box` in this scope
  --> $DIR/issue-88206.rs:59:5
   |
LL |     Box!();
   |     ^^^ not found in this scope
   |
   = note: `Box` is in scope, but it is a struct, not a macro

error: cannot find macro `from_utf8` in this scope
  --> $DIR/issue-88206.rs:55:5
   |
LL |     from_utf8!();
   |     ^^^^^^^^^ not found in this scope
   |
note: `from_utf8` is imported here, but it is a function, not a macro
  --> $DIR/issue-88206.rs:5:5
   |
LL | use std::str::*;
   |     ^^^^^^^^^^^

error: cannot find attribute `println` in the crate root
  --> $DIR/issue-88206.rs:48:3
   |
LL | #[println]
   |   ^^^^^^^ not found in the crate root
   |
   = note: `println` is in scope, but it is a function-like macro

error: cannot find attribute `from_utf8_unchecked` in the crate root
  --> $DIR/issue-88206.rs:43:3
   |
LL | #[from_utf8_unchecked]
   |   ^^^^^^^^^^^^^^^^^^^ not found in the crate root
   |
note: `from_utf8_unchecked` is imported here, but it is a function, not an attribute
  --> $DIR/issue-88206.rs:5:5
   |
LL | use std::str::*;
   |     ^^^^^^^^^^^

error: cannot find attribute `Deserialize` in the crate root
  --> $DIR/issue-88206.rs:38:3
   |
LL | #[Deserialize]
   |   ^^^^^^^^^^^ not found in the crate root
   |
note: `Deserialize` is imported here, but it is a trait, not an attribute
  --> $DIR/issue-88206.rs:17:22
   |
LL | use hey::{Serialize, Deserialize, X};
   |                      ^^^^^^^^^^^

error: cannot find derive macro `println` in the crate root
  --> $DIR/issue-88206.rs:32:10
   |
LL | #[derive(println)]
   |          ^^^^^^^ not found in the crate root
   |
   = note: `println` is in scope, but it is a function-like macro

error: cannot find derive macro `from_utf8_mut` in the crate root
  --> $DIR/issue-88206.rs:27:10
   |
LL | #[derive(from_utf8_mut)]
   |          ^^^^^^^^^^^^^ not found in the crate root
   |
note: `from_utf8_mut` is imported here, but it is a function, not a derive macro
  --> $DIR/issue-88206.rs:5:5
   |
LL | use std::str::*;
   |     ^^^^^^^^^^^

error: cannot find derive macro `Serialize` in the crate root
  --> $DIR/issue-88206.rs:22:10
   |
LL | #[derive(Serialize)]
   |          ^^^^^^^^^ not found in the crate root
   |
note: `Serialize` is imported here, but it is only a trait, without a derive macro
  --> $DIR/issue-88206.rs:17:11
   |
LL | use hey::{Serialize, Deserialize, X};
   |           ^^^^^^^^^

error: aborting due to 11 previous errors

